--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-firebase/auth": "^6.3.4",
     "axios": "^0.19.0",
+    "buffer": "^5.5.0",
     "expo": "^36.0.0",
     "expo-facebook": "~8.0.0",
     "expo-image-manipulator": "~8.0.0",
@@ -41,6 +42,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-searchable-dropdown": "^1.1.1",
+    "react-native-uuid": "^1.4.9",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
     "react-navigation-header-buttons": "^3.0.2",
@@ -48,7 +50,8 @@
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.0.0",
