--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-fbsdk": "^1.1.2",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-get-random-values": "^1.3.0",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
