--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "utf8": "^3.0.0",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "expo-constants": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.0.0",
