--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native-gifted-chat": "^0.13.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
-    "react-native-maps": "^0.26.1",
+    "react-native-maps": "0.26.1",
     "react-native-modal": "^11.5.4",
     "react-native-modals": "^0.19.9",
     "react-native-progress-circle": "^2.1.0",
@@ -53,7 +53,8 @@
     "redux-thunk": "^2.3.0",
     "utf8": "^3.0.0",
     "uuid": "^7.0.2",
-    "expo-constants": "~8.0.0"
+    "expo-constants": "~8.0.0",
+    "expo-location": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.0.0",
