--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.19.0",
     "buffer": "^5.5.0",
     "expo": "^36.0.0",
+    "expo-constants": "~8.0.0",
     "expo-facebook": "~8.0.0",
     "expo-image-manipulator": "~8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-location": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "firebase": "^7.9.3",
     "link": "^0.1.5",
@@ -25,7 +27,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "react-native-autocomplete-input": "^4.1.0",
+    "react-native-autocomplete-input": "^4.2.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-autocomplete": "^1.0.18",
     "react-native-elements": "^1.2.7",
@@ -52,9 +54,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "utf8": "^3.0.0",
-    "uuid": "^7.0.2",
-    "expo-constants": "~8.0.0",
-    "expo-location": "~8.0.0"
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.0.0",
