--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^8.0.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-react": "^7.21.5",
     "redux-devtools-extension": "^2.13.8"
   },
   "private": true
