--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "utf8": "^3.0.0",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "expo-notifications": "~0.7.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.3.0",
