--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
   "expo": {
-    "name": "RN First App",
-    "slug": "rn-first-app",
+    "name": "BabyApp",
+    "slug": "baby-app",
     "privacy": "public",
     "sdkVersion": "39.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
