--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "redux-thunk": "^2.3.0",
     "utf8": "^3.0.0",
     "uuid": "^7.0.2",
-    "expo-notifications": "~0.7.2"
+    "expo-notifications": "~0.7.2",
+    "expo-font": "~8.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.3.0",
