--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.0",
+    "@expo/vector-icons": "^10.0.3",
     "@pusher/chatkit-client-react": "^0.1.3",
     "@react-native-community/datetimepicker": "3.0.0",
     "@react-native-community/masked-view": "0.1.10",
@@ -22,9 +22,11 @@
     "expo": "^39.0.0",
     "expo-constants": "~9.2.0",
     "expo-facebook": "~9.0.0",
+    "expo-font": "~8.3.0",
     "expo-image-manipulator": "~8.3.0",
     "expo-image-picker": "~9.1.0",
     "expo-location": "~9.0.0",
+    "expo-notifications": "~0.7.2",
     "expo-permissions": "~9.3.0",
     "firebase": "7.9.0",
     "link": "^0.1.5",
@@ -51,6 +53,7 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-searchable-dropdown": "^1.1.1",
+    "react-native-switch-selector": "^2.0.6",
     "react-native-uuid": "^1.4.9",
     "react-native-web": "~0.13.7",
     "react-navigation": "^3.12.0",
@@ -60,9 +63,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "utf8": "^3.0.0",
-    "uuid": "^7.0.2",
-    "expo-notifications": "~0.7.2",
-    "expo-font": "~8.3.0"
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.3.0",
