--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~8.3.0",
     "expo-image-manipulator": "~8.3.0",
     "expo-image-picker": "~9.1.0",
+    "expo-linear-gradient": "~8.3.0",
     "expo-location": "~9.0.0",
     "expo-notifications": "~0.7.2",
     "expo-permissions": "~9.3.0",
@@ -32,6 +33,7 @@
     "link": "^0.1.5",
     "moment": "^2.24.0",
     "react": "16.13.1",
+    "react-devtools": "^4.10.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-autocomplete-input": "^4.2.0",
@@ -63,14 +65,14 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "utf8": "^3.0.0",
-    "uuid": "^7.0.2",
-    "expo-linear-gradient": "~8.3.0"
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.3.0",
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "remote-redux-devtools": "^0.5.16"
   },
   "private": true
 }
