--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "utf8": "^3.0.0",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "expo-updates": "~0.3.3"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.3.0",
