--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@pusher/chatkit-client-react": "^0.1.3",
     "@react-native-community/datetimepicker": "3.0.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "^3.0.3",
     "@react-native-firebase/auth": "^6.3.4",
     "@react-navigation/bottom-tabs": "^5.10.2",
     "@react-navigation/drawer": "^5.10.2",
@@ -29,6 +30,7 @@
     "expo-location": "~9.0.0",
     "expo-notifications": "~0.7.2",
     "expo-permissions": "~9.3.0",
+    "expo-updates": "~0.3.3",
     "firebase": "7.9.0",
     "link": "^0.1.5",
     "moment": "^2.24.0",
@@ -65,8 +67,7 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "utf8": "^3.0.0",
-    "uuid": "^7.0.2",
-    "expo-updates": "~0.3.3"
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^8.3.0",
