--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.3",
+    "@expo/vector-icons": "^12.0.0",
     "@pusher/chatkit-client-react": "^0.1.3",
-    "@react-native-community/datetimepicker": "3.0.0",
+    "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/slider": "^3.0.3",
+    "@react-native-community/slider": "3.0.3",
     "@react-native-firebase/auth": "^6.3.4",
     "@react-navigation/bottom-tabs": "^5.10.2",
     "@react-navigation/drawer": "^5.10.2",
@@ -20,31 +20,32 @@
     "@react-navigation/stack": "^5.11.1",
     "axios": "^0.19.0",
     "buffer": "^5.5.0",
-    "expo": "^39.0.0",
-    "expo-constants": "~9.2.0",
-    "expo-facebook": "~9.0.0",
-    "expo-font": "~8.3.0",
-    "expo-image-manipulator": "~8.3.0",
-    "expo-image-picker": "~9.1.0",
-    "expo-linear-gradient": "~8.3.0",
-    "expo-location": "~9.0.0",
-    "expo-notifications": "~0.7.2",
-    "expo-permissions": "~9.3.0",
-    "expo-updates": "~0.3.3",
+    "expo": "^40.0.0",
+    "expo-app-loading": "^1.2.1",
+    "expo-constants": "~9.3.3",
+    "expo-facebook": "~9.1.0",
+    "expo-font": "~8.4.0",
+    "expo-image-manipulator": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-location": "~10.0.0",
+    "expo-notifications": "~0.8.2",
+    "expo-permissions": "~10.0.0",
+    "expo-updates": "~0.4.1",
     "firebase": "7.9.0",
     "link": "^0.1.5",
     "moment": "^2.24.0",
     "react": "16.13.1",
     "react-devtools": "^4.10.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-autocomplete-input": "^4.2.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-autocomplete": "^1.0.18",
     "react-native-elements": "^3.3.2",
     "react-native-fbsdk": "^1.1.2",
     "react-native-firebase": "^5.6.0",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-get-random-values": "^1.3.0",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-image-picker": "^2.3.1",
@@ -54,12 +55,12 @@
     "react-native-modals": "^0.19.9",
     "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
     "react-native-searchable-dropdown": "^1.1.1",
     "react-native-switch-selector": "^2.1.4",
     "react-native-uuid": "^1.4.9",
-    "react-native-web": "~0.13.7",
+    "react-native-web": "~0.13.12",
     "react-navigation": "^3.12.0",
     "react-navigation-header-buttons": "^3.0.2",
     "react-pure-lifecycle": "^3.0.0",
@@ -70,7 +71,7 @@
     "uuid": "^7.0.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.3.0",
+    "babel-preset-expo": "8.3.0",
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
     "redux-devtools-extension": "^2.13.8",
