--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-gifted-chat": "^0.13.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.4",
     "react-native-modals": "^0.19.9",
