--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-image-picker": "~10.1.4",
     "expo-linear-gradient": "~9.1.0",
     "expo-location": "~12.0.4",
+    "expo-modules-core": "^0.6.5",
     "expo-notifications": "~0.11.6",
     "expo-permissions": "~12.0.1",
     "expo-updates": "~0.5.4",
