--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@pusher/chatkit-client-react": "^0.1.3",
-    "@react-native-community/datetimepicker": "3.2.0",
+    "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/slider": "3.0.3",
+    "@react-native-community/slider": "4.1.12",
     "@react-native-firebase/auth": "^6.3.4",
     "@react-navigation/bottom-tabs": "^5.10.2",
     "@react-navigation/drawer": "^5.10.2",
@@ -20,26 +21,26 @@
     "@react-navigation/stack": "^5.11.1",
     "axios": "^0.19.0",
     "buffer": "^5.5.0",
-    "expo": "^41.0.0",
-    "expo-app-loading": "^1.2.1",
-    "expo-constants": "~10.1.3",
-    "expo-facebook": "~11.0.5",
-    "expo-font": "~9.1.0",
-    "expo-image-manipulator": "~9.1.0",
-    "expo-image-picker": "~10.1.4",
-    "expo-linear-gradient": "~9.1.0",
-    "expo-location": "~12.0.4",
-    "expo-modules-core": "^0.6.5",
-    "expo-notifications": "~0.11.6",
-    "expo-permissions": "~12.0.1",
-    "expo-updates": "~0.5.4",
+    "expo": "^43.0.0",
+    "expo-app-loading": "~1.2.1",
+    "expo-constants": "~12.1.3",
+    "expo-facebook": "~12.0.3",
+    "expo-font": "~10.0.3",
+    "expo-image-manipulator": "~10.1.2",
+    "expo-image-picker": "~11.0.3",
+    "expo-linear-gradient": "~10.0.3",
+    "expo-location": "~13.0.4",
+    "expo-modules-core": "~0.4.10",
+    "expo-notifications": "~0.13.3",
+    "expo-updates": "~0.10.15",
     "firebase": "8.2.3",
     "link": "^0.1.5",
     "moment": "^2.24.0",
-    "react": "16.13.1",
+    "react": "17.0.1",
     "react-devtools": "^4.10.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-async-storage": "0.0.1",
     "react-native-autocomplete-input": "^4.2.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-autocomplete": "^1.0.18",
@@ -52,17 +53,17 @@
     "react-native-image-picker": "^2.3.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "0.27.1",
+    "react-native-maps": "0.28.1",
     "react-native-modal": "^11.5.4",
     "react-native-modals": "^0.19.9",
     "react-native-progress-circle": "^2.1.0",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-searchable-dropdown": "^1.1.1",
     "react-native-switch-selector": "^2.1.4",
     "react-native-uuid": "^1.4.9",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "react-navigation": "^3.12.0",
     "react-navigation-header-buttons": "^3.0.2",
     "react-pure-lifecycle": "^3.0.0",
@@ -73,7 +74,7 @@
     "uuid": "^7.0.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "8.3.0",
+    "babel-preset-expo": "8.5.1",
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
     "redux-devtools-extension": "^2.13.8",
