--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@pusher/chatkit-client-react": "^0.1.3",
-    "@react-native-async-storage/async-storage": "^1.16.1",
-    "@react-native-community/datetimepicker": "3.5.2",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "4.1.12",
     "@react-native-firebase/auth": "^6.3.4",
@@ -21,18 +21,18 @@
     "@react-navigation/stack": "^5.11.1",
     "axios": "^0.19.0",
     "buffer": "^5.5.0",
-    "expo": "^43.0.0",
-    "expo-app-loading": "~1.2.1",
-    "expo-constants": "~12.1.3",
-    "expo-facebook": "~12.0.3",
-    "expo-font": "~10.0.3",
-    "expo-image-manipulator": "~10.1.2",
-    "expo-image-picker": "~11.0.3",
-    "expo-linear-gradient": "~10.0.3",
-    "expo-location": "~13.0.4",
-    "expo-modules-core": "~0.4.10",
-    "expo-notifications": "~0.13.3",
-    "expo-updates": "~0.10.15",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-constants": "~13.0.1",
+    "expo-facebook": "~12.1.0",
+    "expo-font": "~10.0.4",
+    "expo-image-manipulator": "~10.2.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-location": "~14.0.1",
+    "expo-modules-core": "~0.6.4",
+    "expo-notifications": "~0.14.0",
+    "expo-updates": "~0.11.6",
     "firebase": "8.2.3",
     "link": "^0.1.5",
     "moment": "^2.24.0",
@@ -47,19 +47,19 @@
     "react-native-elements": "^3.3.2",
     "react-native-fbsdk": "^1.1.2",
     "react-native-firebase": "^5.6.0",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-map-clustering": "^3.4.2",
-    "react-native-maps": "0.28.1",
+    "react-native-maps": "0.29.4",
     "react-native-modal": "^11.5.4",
     "react-native-modals": "^0.19.9",
     "react-native-progress-circle": "^2.1.0",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
+    "react-native-screens": "~3.10.1",
     "react-native-searchable-dropdown": "^1.1.1",
     "react-native-switch-selector": "^2.1.4",
     "react-native-uuid": "^1.4.9",
@@ -74,7 +74,7 @@
     "uuid": "^7.0.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "8.5.1",
+    "babel-preset-expo": "9.0.2",
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
     "redux-devtools-extension": "^2.13.8",
