--- a/package.json
+++ b/package.json
@@ -74,11 +74,16 @@
     "uuid": "^7.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/react": "^17.0.39",
+    "@types/react-native": "^0.67.1",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-preset-expo": "9.0.2",
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
     "redux-devtools-extension": "^2.13.8",
-    "remote-redux-devtools": "^0.5.16"
+    "remote-redux-devtools": "^0.5.16",
+    "typescript": "^4.6.2"
   },
   "private": true
 }
